Issue #SB-14460 body alignments changes in sso login screens

--- a/src/app/client/src/app/modules/merge-account/components/merge-account-status/merge-account-status.component.scss
+++ b/src/app/client/src/app/modules/merge-account/components/merge-account-status/merge-account-status.component.scss
@@ -1,3 +1,4 @@
-.sb-merged-account-body-header{
-    font-size: 18px;
+
+.sb-merged-account-body-para.sb-color-success{
+    color:#008840;
 }
